Use material styling

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,20 +1,116 @@
 :root {
   color-scheme: light dark;
-  --primary-bg: #ffffff;
-  --surface-bg: #f5f5f5;
-  --primary-text: #212121;
-  --secondary-text: #757575;
-  --accent-color: #6200ee;
+
+  --md-sys-typescale-body-large-size:1.3rem;
+
+  --md-sys-color-background: #fff8f6;
+  --md-sys-color-error: #ba1a1a;
+  --md-sys-color-error-container: #ffdad6;
+  --md-sys-color-inverse-on-surface: #ffede8;
+  --md-sys-color-inverse-primary: #ffb5a0;
+  --md-sys-color-inverse-surface: #392e2b;
+  --md-sys-color-on-background: #231917;
+  --md-sys-color-on-error: #ffffff;
+  --md-sys-color-on-error-container: #410002;
+  --md-sys-color-on-primary: #ffffff;
+  --md-sys-color-on-primary-container: #3a0b01;
+  /* --md-sys-color-on-primary-fixed: ; */
+  /* --md-sys-color-on-primary-fixed-variant: ; */
+  --md-sys-color-on-secondary: #ffffff;
+  --md-sys-color-on-secondary-container: #2c150f;
+  /* --md-sys-color-on-secondary-fixed: ; */
+  /* --md-sys-color-on-secondary-fixed-variant: ; */
+  --md-sys-color-on-surface: #231917;
+  --md-sys-color-on-surface-variant: #53433f;
+  --md-sys-color-on-tertiary: #6c5d2f;
+  --md-sys-color-on-tertiary-container: #231b00;
+  /* --md-sys-color-on-tertiary-fixed: ; */
+  /* --md-sys-color-on-tertiary-fixed-variant: ; */
+  --md-sys-color-outline: #85736e;
+  --md-sys-color-outline-variant: #d8c2bc;
+  --md-sys-color-primary: #8f4c38;
+  --md-sys-color-primary-container: #ffdbd1;
+  /* --md-sys-color-primary-fixed: ; */
+  /* --md-sys-color-primary-fixed-dim: ; */
+  --md-sys-color-scrim: #000000;
+  --md-sys-color-secondary: #77574e;
+  --md-sys-color-secondary-container: #ffdbd1;
+  /* --md-sys-color-secondary-fixed: ; */
+  /* --md-sys-color-secondary-fixed-dim: ; */
+  --md-sys-color-shadow: #000000;
+  --md-sys-color-surface: #fff8f6;
+  --md-sys-color-surface-bright: #fff8f6;
+  --md-sys-color-surface-container: #fceae5;
+  --md-sys-color-surface-container-high: #f7e4e0;
+  --md-sys-color-surface-container-highest: #f1dfda;
+  --md-sys-color-surface-container-low: #fff1ed;
+  --md-sys-color-surface-container-lowest: #ffffff;
+  --md-sys-color-surface-dim: #e8d6d2;
+  /* --md-sys-color-surface-tint: ; */
+  /* --md-sys-color-surface-variant: ; */
+  --md-sys-color-tertiary: #6c5d2f;
+  --md-sys-color-tertiary-container: #f5e1a7;
+  /* --md-sys-color-tertiary-fixed: ; */
+  /* --md-sys-color-tertiary-fixed-dim: ; */
+
 
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary-bg: #121212;
-    --surface-bg: #1e1e1e;
-    --primary-text: #ffffff;
-    --secondary-text: #b3b3b3;
-    --accent-color: #bb86fc;
+
+
+    --md-sys-color-background: #1a110f;
+    --md-sys-color-error: #ffb4ab;
+    --md-sys-color-error-container: #93000a;
+    --md-sys-color-inverse-on-surface: #392e2b;
+    --md-sys-color-inverse-primary: #8f4c38;
+    --md-sys-color-inverse-surface: #f1dfda;
+    --md-sys-color-on-background: #f1dfda;
+    --md-sys-color-on-error: #690005;
+    --md-sys-color-on-error-container: #ffdad6;
+    --md-sys-color-on-primary: #561f0f;
+    --md-sys-color-on-primary-container: #ffdbd1;
+    /* --md-sys-color-on-primary-fixed: ; */
+    /* --md-sys-color-on-primary-fixed-variant: ; */
+    --md-sys-color-on-secondary: #442a22;
+    --md-sys-color-on-secondary-container: #ffdbd1;
+    /* --md-sys-color-on-secondary-fixed: ; */
+    /* --md-sys-color-on-secondary-fixed-variant: ; */
+    --md-sys-color-on-surface: #f1dfda;
+    --md-sys-color-on-surface-variant: #d8c2bc;
+    --md-sys-color-on-tertiary: #3b2f05;
+    --md-sys-color-on-tertiary-container: #f5e1a7;
+    /* --md-sys-color-on-tertiary-fixed: ; */
+    /* --md-sys-color-on-tertiary-fixed-variant: ; */
+    --md-sys-color-outline: #a08c87;
+    --md-sys-color-outline-variant: #53433f;
+    --md-sys-color-primary: #ffb5a0;
+    --md-sys-color-primary-container: #723523;
+    /* --md-sys-color-primary-fixed: ; */
+    /* --md-sys-color-primary-fixed-dim: ; */
+    --md-sys-color-scrim: #000000;
+    --md-sys-color-secondary: #e7bdb2;
+    --md-sys-color-secondary-container: #5d4037;
+    /* --md-sys-color-secondary-fixed: ; */
+    /* --md-sys-color-secondary-fixed-dim: ; */
+    --md-sys-color-shadow: #000000;
+    --md-sys-color-surface: #1a110f;
+    --md-sys-color-surface-bright: #423734;
+    --md-sys-color-surface-container: #271d1b;
+    --md-sys-color-surface-container-high: #322825;
+    --md-sys-color-surface-container-highest: #3d322f;
+    --md-sys-color-surface-container-low: #231917;
+    --md-sys-color-surface-container-lowest: #140c0a;
+    --md-sys-color-surface-dim: #1a110f;
+    /* --md-sys-color-surface-tint: ; */
+    /* --md-sys-color-surface-variant: ; */
+    --md-sys-color-tertiary: #d8c58d;
+    --md-sys-color-tertiary-container: #534619;
+    /* --md-sys-color-tertiary-fixed: ; */
+    /* --md-sys-color-tertiary-fixed-dim: ; */
+
+
   }
 }
 
@@ -29,13 +125,13 @@
 
 
 html {
-  background-color: var(--primary-bg);
-  color: var(--primary-text);
+  background-color: var(--md-sys-color-background);
+  color: var(--md-sys-color-primary);
   font-size: 62.5%;
 }
 
 body {
-  color: var(--primary-text);
+  color: var(--md-sys-color-primary);
   font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
